--- a/grid.html
+++ b/grid.html
@@ -32,6 +32,7 @@
     </div>
     <div class="col border border-0  bg-secondary" >
         div1
+        check connection
     
     </div>
 </div>
